--- a/themes/chronicle/layout/_partial/head.ejs
+++ b/themes/chronicle/layout/_partial/head.ejs
@@ -12,5 +12,8 @@
   <% if (theme.rss) { %>
   <link rel="alternate" type="application/atom+xml" title="<%= config.title %>" href="<%= url_for(theme.rss) %>">
   <% } %>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Metamorphous&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
   <%- css('css/style') %>
 </head>
