--- a/themes/chronicle/layout/index.ejs
+++ b/themes/chronicle/layout/index.ejs
@@ -39,7 +39,7 @@
 <% } %>
 
 <section class="section section--chronicle">
-  <%- partial('_partial/section-header', { title: 'Chronicle', description: 'All posts in reverse chronological order' }) %>
+  <%- partial('_partial/section-header', { title: 'Chronicle', description: 'Documenting my technical journey.' }) %>
   <div class="chronicle-list">
     <% months.forEach(function(month) { %>
       <div class="chronicle-month">
