--- a/themes/chronicle/layout/_partial/pagination.ejs
+++ b/themes/chronicle/layout/_partial/pagination.ejs
@@ -1,13 +1,13 @@
 <% if (page.total > 1) { %>
 <nav class="pagination">
   <% if (page.prev) { %>
-    <a class="pagination__link pagination__prev" href="<%- url_for(page.prev_link) %>">&larr; Newer</a>
+    <a class="pagination__link pagination__prev" href="<%- url_for(page.prev_link) %>" aria-label="Newer posts">&larr; Newer</a>
   <% } else { %>
     <span class="pagination__link pagination__prev pagination__disabled">&larr; Newer</span>
   <% } %>
   <span class="pagination__info"><%= page.current %> / <%= page.total %></span>
   <% if (page.next) { %>
-    <a class="pagination__link pagination__next" href="<%- url_for(page.next_link) %>">Older &rarr;</a>
+    <a class="pagination__link pagination__next" href="<%- url_for(page.next_link) %>" aria-label="Older posts">Older &rarr;</a>
   <% } else { %>
     <span class="pagination__link pagination__next pagination__disabled">Older &rarr;</span>
   <% } %>
