feat(i18n): add chinese translation and language switcher

--- a/themes/chronicle/layout/_partial/featured-item.ejs
+++ b/themes/chronicle/layout/_partial/featured-item.ejs
@@ -1,5 +1,5 @@
 <article class="featured-item">
-  <div class="featured-item__label">Featured</div>
+  <div class="featured-item__label"><%= __('featured') %></div>
   <h2 class="featured-item__title">
     <a href="<%- url_for(item.path) %>"><%= item.title %></a>
   </h2>
