--- a/themes/chronicle/source/css/style.styl
+++ b/themes/chronicle/source/css/style.styl
@@ -121,8 +121,23 @@ img
   text-transform uppercase
   letter-spacing 0.08em
   transition color 0.15s ease
+  background none
+  border none
+  padding 0
+  cursor pointer
+  font-family inherit
   &:hover
     color $text
+
+.header__link--lang
+  border 1px solid $line
+  border-radius 999px
+  padding 6px 10px
+  text-transform none
+  letter-spacing 0.04em
+  line-height 1
+  &:hover
+    border-color $text-dim
 
 .header__toggle
   display none
