--- a/themes/chronicle/layout/_partial/footer.ejs
+++ b/themes/chronicle/layout/_partial/footer.ejs
@@ -3,7 +3,7 @@
     <div class="footer__left">
       <span>&copy; <%= new Date().getFullYear() %> <%= config.author || config.title %></span>
       <span class="footer__sep">&middot;</span>
-      <span>Powered by <a href="https://hexo.io" target="_blank" rel="noopener">Hexo</a></span>
+      <span><%= __('powered_by') %> <a href="https://hexo.io" target="_blank" rel="noopener">Hexo</a></span>
     </div>
     <div class="footer__right">
       <% if (theme.social) { %>
