--- a/themes/chronicle/layout/category.ejs
+++ b/themes/chronicle/layout/category.ejs
@@ -1,6 +1,6 @@
 <section class="taxonomy">
   <% if (page.category) { %>
-    <%- partial('_partial/section-header', { title: page.category, description: page.posts.length + ' posts' }) %>
+    <%- partial('_partial/section-header', { title: page.category, description: page.posts.length + ' ' + __('posts_suffix') }) %>
     <div class="chronicle-list">
       <% page.posts.sort('-date').forEach(function(post) { %>
         <%- partial('_partial/post-card', { item: post }) %>
@@ -8,7 +8,7 @@
     </div>
     <%- partial('_partial/pagination') %>
   <% } else { %>
-    <%- partial('_partial/section-header', { title: 'Categories', description: '' }) %>
+    <%- partial('_partial/section-header', { title: __('category'), description: '' }) %>
     <div class="category-list">
       <% site.categories.forEach(function(cat) { %>
         <a class="category-list__item" href="<%- url_for(cat.path) %>">
