--- a/themes/chronicle/layout/layout.ejs
+++ b/themes/chronicle/layout/layout.ejs
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="<%= config.language || 'en' %>">
-<%- partial('_partial/head') %>
-<body>
-  <%- partial('_partial/header') %>
-  <main class="main">
-    <div class="container">
-      <%- body %>
-    </div>
-  </main>
-  <%- partial('_partial/footer') %>
-  <%- partial('_partial/scripts') %>
-</body>
+<% var langFromPage = page && page.lang; var langFromConfig =
+Array.isArray(config.language) ? config.language[0] : config.language; var
+htmlLang = langFromPage || langFromConfig || 'en'; %>
+<html lang="<%= htmlLang %>">
+  <%- partial('_partial/head') %>
+  <body>
+    <%- partial('_partial/header') %>
+    <main class="main">
+      <div class="container"><%- body %></div>
+    </main>
+    <%- partial('_partial/footer') %> <%- partial('_partial/scripts') %>
+  </body>
 </html>
