--- a/themes/chronicle/layout/tag.ejs
+++ b/themes/chronicle/layout/tag.ejs
@@ -1,6 +1,6 @@
 <section class="taxonomy">
   <% if (page.tag) { %>
-    <%- partial('_partial/section-header', { title: '#' + page.tag, description: page.posts.length + ' posts' }) %>
+    <%- partial('_partial/section-header', { title: '#' + page.tag, description: page.posts.length + ' ' + __('posts_suffix') }) %>
     <div class="chronicle-list">
       <% page.posts.sort('-date').forEach(function(post) { %>
         <%- partial('_partial/post-card', { item: post }) %>
@@ -8,7 +8,7 @@
     </div>
     <%- partial('_partial/pagination') %>
   <% } else { %>
-    <%- partial('_partial/section-header', { title: 'Tags', description: '' }) %>
+    <%- partial('_partial/section-header', { title: __('tag'), description: '' }) %>
     <div class="tag-cloud">
       <% site.tags.forEach(function(tag) { %>
         <a class="tag-cloud__item" href="<%- url_for(tag.path) %>">
