fix(i18n): adjust language toggle button styling and translation

--- a/themes/chronicle/source/css/style.styl
+++ b/themes/chronicle/source/css/style.styl
@@ -130,6 +130,10 @@ img
     color $text
 
 .header__link--lang
+  display inline-flex
+  align-items center
+  justify-content center
+  align-self center
   border 1px solid $line
   border-radius 999px
   padding 6px 10px
